--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -6,9 +6,9 @@ on:
     - 3.x
   pull_request:
     branches:
-    - 3.x
-  schedule:
-    - cron: '0 4 */1 * *' # At 04:00 on every day-of-month
+    - funnel
+  #schedule:
+  #  - cron: '0 4 */1 * *' # At 04:00 on every day-of-month
   workflow_dispatch:
     inputs:
       build_mode:
