--- a/.github/workflows/ci_vtests.yml
+++ b/.github/workflows/ci_vtests.yml
@@ -3,7 +3,15 @@ name: CI_vtests
 on:
   pull_request:
     branches:
-    - 3.x_off
+    - main
+  schedule:
+    - cron: '0 4 */1 * *' # At 04:00 on every day-of-month
+  workflow_dispatch:
+    inputs:
+      build_mode:
+        description: 'Test mode: all, modules'
+        required: true
+        default: 'all'
 
 jobs:
   run_vtests:
