--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -53,6 +53,7 @@ jobs:
           mingw-w64-x86_64-readline
           mingw-w64-x86_64-gdb
           mingw-w64-x86_64-zeromq
+          mingw-w64-cmake
     - name: Clone repository
       uses: actions/checkout@v3
       with:
