--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -54,6 +54,7 @@ jobs:
           mingw-w64-x86_64-gdb
           mingw-w64-x86_64-zeromq
           mingw-w64-x86_64-cmake
+          mingw-w64-x86_64-qt5
     - name: Clone repository
       uses: actions/checkout@v3
       with:
