--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -55,6 +55,7 @@ jobs:
           mingw-w64-x86_64-zeromq
           mingw-w64-x86_64-cmake
           mingw-w64-x86_64-qt5
+          mingw-w64-x86_64-portaudio
     - name: Clone repository
       uses: actions/checkout@v3
       with:
