--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -57,6 +57,7 @@ jobs:
           mingw-w64-x86_64-qt5
           mingw-w64-x86_64-portaudio
           mingw-w64-x86_64-libvorbis
+          mingw-w64-x86_64-libsndfile
     - name: Clone repository
       uses: actions/checkout@v3
       with:
