mingw ogg package

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -58,6 +58,7 @@ jobs:
           mingw-w64-x86_64-portaudio
           mingw-w64-x86_64-libvorbis
           mingw-w64-x86_64-libsndfile
+          mingw-w64-x86_64-libogg
     - name: Clone repository
       uses: actions/checkout@v3
       with:
