mingw lame package

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -59,6 +59,7 @@ jobs:
           mingw-w64-x86_64-libvorbis
           mingw-w64-x86_64-libsndfile
           mingw-w64-x86_64-libogg
+          mingw-w64-x86_64-lame
     - name: Clone repository
       uses: actions/checkout@v3
       with:
