--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -390,7 +390,7 @@ if (MINGW)
    endif(CMAKE_BUILD_TYPE MATCHES "DEBUG")
 
    target_link_libraries(mscoreapp
-      portaudiodll
+      ${PORTAUDIODLL}
       portmidi
       winmm
       mscore_freetype
@@ -518,7 +518,7 @@ else (MINGW)
 
       include(FindStaticLibrary)
       target_link_libraries(mscoreapp
-         portaudiodll
+         ${PORTAUDIODLL}
          portmidi
          winmm
          mscore_freetype
