--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -36,6 +36,7 @@ jobs:
           base-devel
           git
           gettext-devel
+          mingw-w64-x86_64-make
           mingw-w64-x86_64-autotools
           mingw-w64-x86_64-libtool
           mingw-w64-x86_64-toolchain
