--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -61,6 +61,7 @@ jobs:
           mingw-w64-x86_64-libsndfile
           mingw-w64-x86_64-libogg
           mingw-w64-x86_64-lame
+          mingw-w64-x86_64-jack2
     - name: Clone repository
       uses: actions/checkout@v3
       with:
