--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -555,6 +555,11 @@ if (BUILD_PORTMIDI)
         message(SEND_ERROR "Error: PortMidi support requested (BUILD_PORTMIDI=${BUILD_PORTMIDI}), but PortAudio support is disabled (BUILD_PORTAUDIO=${BUILD_PORTAUDIO}). PortMidi requires PortAudio.")
     endif (NOT BUILD_PORTAUDIO)
     set (USE_PORTMIDI 1)
+    if (MINGW OR MSVC)
+        include(FindPortMidi)
+    else (MINGW OR MSVC)
+        pkg_check_modules(portmidi)
+    endif (MINGW OR MSVC)
 else (BUILD_PORTMIDI)
     message(STATUS "PortMidi support disabled")
 endif (BUILD_PORTMIDI)
