move seq to /muxseq

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -831,6 +831,7 @@ add_subdirectory(importexport)
 add_subdirectory(mscore)
 add_subdirectory(main)
 add_subdirectory(muxaudio)
+add_subdirectory(muxseq)
 
 if (BUILD_CRASH_REPORTER)
       set (CRASHREPORTER_EXECUTABLE_NAME "${MSCORE_EXECUTABLE_NAME}-crash-reporter")
