--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -79,8 +79,8 @@ set (SOURCE_LIB
       ${OVE_SRC}
       ${MIDIIMPORT_SRC}
 
-      ${PROJECT_SOURCE_DIR}/muxtools/exportmidi.cpp
-      ${PROJECT_SOURCE_DIR}/muxtools/exportmidi.h
+      ${PROJECT_SOURCE_DIR}/muxtools/exports/exportmidi.cpp
+      ${PROJECT_SOURCE_DIR}/muxtools/exports/exportmidi.h
       ${PROJECT_SOURCE_DIR}/mscore/preferences.cpp
       ${PROJECT_SOURCE_DIR}/mscore/shortcut.cpp
       ${PROJECT_SOURCE_DIR}/mscore/stringutils.cpp
