debug-builds: stack-smash protect

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,7 +274,7 @@ if (BUILD_AUTOUPDATE STREQUAL "ON")
 endif(BUILD_AUTOUPDATE STREQUAL "ON")
 
 if (NOT MSVC)
-   set(CMAKE_CXX_FLAGS_DEBUG   "-g")
+   set(CMAKE_CXX_FLAGS_DEBUG   "-g -fstack-protector")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -DQT_NO_DEBUG")
 endif (NOT MSVC)
 
