guile mingw fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -504,8 +504,8 @@ endif(APPLE)
 ##
 if (BUILD_GUILE)
     set(USE_GUILE 1)
-    execute_process(COMMAND guile-config compile OUTPUT_VARIABLE GUILE_COMPILE OUTPUT_STRIP_TRAILING_WHITESPACE)
-    execute_process(COMMAND guile-config link OUTPUT_VARIABLE GUILE_LINK OUTPUT_STRIP_TRAILING_WHITESPACE)
+    execute_process(COMMAND pkg-config --cflags guile-3.0 OUTPUT_VARIABLE GUILE_COMPILE OUTPUT_STRIP_TRAILING_WHITESPACE)
+    execute_process(COMMAND pkg-config --libs guile-3.0 OUTPUT_VARIABLE GUILE_LINK OUTPUT_STRIP_TRAILING_WHITESPACE)
     message(STATUS "Guile compile time directives: ${GUILE_COMPILE}")
     message(STATUS "Guile link directives: ${GUILE_LINK}")
 endif(BUILD_GUILE)
