CI setup install guile

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -8,7 +8,7 @@ on:
     branches:
     - funnel
   schedule:
-    - cron: '0 4 * * 0' # At 04:00 on every sunday
+    - cron: '0 4 */7 * *'
   workflow_dispatch:
     inputs:
       build_mode:
@@ -66,15 +66,37 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v3
       with:
-        ref: funnel
+        ref: master
     - name: Build
       shell: msys2 {0}
       run: |
         ./build/ci/tools/build_mingw.sh
-    - name: Upload artifacts on GitHub
-      if: ${{ always() }}
+    - name: Package
+      shell: msys2 {0}
+      run: |
+        ./build/ci/tools/package.sh
+    - name: Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: MuseScore_x64_${{ github.run_id }}
-        path: build.artifacts\ 
-
+        name: mingw-w64-musescore3
+        path: musescore3-mingw64.zip
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: ${{ steps.version.outputs.version }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: ./musescore3-mingw64.zip
+        asset_name: musescore3-mingw64.zip
+        asset_content_type: application/zip
