--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,22 +153,12 @@ option(BUILD_AUTOUPDATE "Build with autoupdate support" OFF)
 option(BUILD_CRASH_REPORTER "Build with crash reporter" OFF)
 option(BUILD_PORTABLEAPPS "Windows build for PortableApps.com" OFF)
 set(CRASH_REPORT_URL "http://127.0.0.1:1127/post" CACHE STRING "URL where to send crash reports (valid if BUILD_CRASH_REPORTER is set to ON)")
-option(BUILD_TELEMETRY_MODULE "Build with telemetry module" ON)
-set(TELEMETRY_TRACK_ID "" CACHE STRING "Telemetry track id")
 option(PACKAGE_FILE_ASSOCIATION "File types association" OFF)
 
-if (MSCORE_UNSTABLE OR TELEMETRY_TRACK_ID STREQUAL "")
-      message("Telemetry feature is disabled")
+if (MSCORE_UNSTABLE)
       message("Build is unstable = ${MSCORE_UNSTABLE}")
-
-      if (TELEMETRY_TRACK_ID STREQUAL "")
-            message("Telemetry track id is empty")
-      else(TELEMETRY_TRACK_ID STREQUAL "")
-            message("Telemetry track id isn't empty")
-      endif(TELEMETRY_TRACK_ID STREQUAL "")
-
       add_definitions(-DTELEMETRY_DISABLED)
-endif(MSCORE_UNSTABLE OR TELEMETRY_TRACK_ID STREQUAL "")
+endif(MSCORE_UNSTABLE)
 
 if (BUILD_CRASH_REPORTER)
       message("Crash reporter enabled")
@@ -687,11 +677,6 @@ if (OMR)
    include_directories(/usr/include/poppler/qt5)
  endif (NOT USE_SYSTEM_POPPLER)
 endif (OMR)
-
-if (BUILD_TELEMETRY_MODULE)
-      add_subdirectory(telemetry)
-      add_subdirectory(thirdparty/qt-google-analytics)
-endif (BUILD_TELEMETRY_MODULE)
 
 add_subdirectory(global)
 add_subdirectory(importexport)
