--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -333,6 +333,7 @@ target_link_libraries(mscoreapp
       mux
       muxlib
       muxtools
+      muxseqclient
       qzip
       importexport
       ${COCOABRIDGE}
