dont use thirdparty freetype

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -337,7 +337,7 @@ target_link_libraries(mscoreapp
       importexport
       ${COCOABRIDGE}
       ${ZMQ_LIBRARIES}
-      ${FREETYPE_LIBRARIES}
+      freetype
       )
 
 if (BUILD_CRASH_REPORTER)
@@ -403,7 +403,7 @@ if (MINGW)
    endif(CMAKE_BUILD_TYPE MATCHES "DEBUG")
 
    target_link_libraries(mscoreapp
-      mscore_freetype
+      freetype
       z
       )
 
@@ -488,7 +488,7 @@ else (MINGW)
 
       include(FindStaticLibrary)
       target_link_libraries(mscoreapp
-         mscore_freetype
+         freetype
          zlibstat
          )
 
